<resources>
    <string name="app_name">Lynk</string>
    <string name="github_repo_path">pixxel-dev/Lynk</string>

    <string name="tab_files">Files</string>
    <string name="tab_installer">Installer</string>
    <string name="tab_system">System</string>
    <string name="tab_buttons">Buttons</string>
    <string name="tab_update">Update</string>

    <string name="subtab_specs">Specs</string>
    <string name="subtab_logs">System Logs</string>
    <string name="subtab_rights">Rights</string>

    <string name="title_files">• File Explorer</string>
    <string name="title_installer">• APK Installer</string>
    <string name="title_system">• System Diagnostics</string>
    <string name="title_buttons">• Overlay Touch</string>
    <string name="title_update">• App Update</string>
...
    <string name="grant_access">Grant access</string>

    <string name="theme_system">System Theme</string>
    <string name="theme_light">Light Theme</string>
    <string name="theme_dark">Dark Theme</string>

    <string name="action_home_navigator">Home Navigator</string>
    <string name="action_home_navigator_desc">Navigate to home screen</string>
    <string name="action_back_navigator">Back Navigator</string>
    <string name="action_back_navigator_desc">Trigger back action</string>
    <string name="action_refresh_navigator">Refresh</string>
    <string name="action_refresh_navigator_desc">Refresh interface or trigger update</string>

...
